--- a/src/components/ShareModal/ShareModal.module.css
+++ b/src/components/ShareModal/ShareModal.module.css
@@ -1,5 +1,6 @@
 .root {
-  @apply bg-primary max-w-xl border border-accent-2 rounded-md shadow-md p-8 flex flex-col items-center;
+  @apply bg-primary max-w-xl border border-accent-2 rounded-xl shadow-md p-8 flex flex-col items-center;
+  @apply max-h-[660px];
 }
 
 .typeSelector {
