--- a/src/components/Landing/landing.module.css
+++ b/src/components/Landing/landing.module.css
@@ -2,11 +2,11 @@
   background-image: url("data:image/svg+xml,<svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><defs><pattern id='a' patternUnits='userSpaceOnUse' width='20' height='20' patternTransform='scale(1) rotate(0)'><rect x='0' y='0' width='100%' height='100%' fill='hsla(0,0%,100%,1)'/><path d='M3.25 10h13.5M10 3.25v13.5'  stroke-linejoin='round' stroke-linecap='round' stroke-width='1' stroke='hsla(259, 0%, 93%, 1)' fill='none'/></pattern></defs><rect width='800%' height='800%' transform='translate(0,0)' fill='url(%23a)'/></svg>")
 }
 .logo {
-  @apply text-neutral-600 text-2xl font-semibold cursor-pointer;
+  @apply text-primary text-2xl cursor-pointer;
 }
 
 .header {
-  @apply text-center flex items-center justify-center;
+  @apply flex items-center justify-between container mx-auto;
   min-height: 88px;
 }
 
@@ -48,7 +48,7 @@
 }
 
 .hero{
-  @apply flex md:flex-row flex-col items-stretch justify-center;
+  @apply flex md:flex-row flex-col justify-center gap-6;
 }
 
 .heroContent {
@@ -56,12 +56,12 @@
 
 }
 .heroImage {
-  @apply md:w-3/5;
+  @apply md:w-2/5 mt-8;
 }
 
 
 .featuresSection {
-  @apply bg-dark text-white;
+  @apply bg-accent-8 text-white;
 }
 
 .featuresTitle {
@@ -78,5 +78,5 @@
 }
 
 .featureItemImageContainer {
-  @apply border border-orange-light rounded-md overflow-hidden p-2 md:w-96 my-4 w-64;
+  @apply border border-blue-light rounded-md overflow-hidden p-2 md:w-96 my-4 w-64;
 }
