--- a/src/components/Landing/landing.module.css
+++ b/src/components/Landing/landing.module.css
@@ -1,12 +1,12 @@
 .root {
-  background-image: url("data:image/svg+xml,<svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><defs><pattern id='a' patternUnits='userSpaceOnUse' width='20' height='20' patternTransform='scale(1) rotate(0)'><rect x='0' y='0' width='100%' height='100%' fill='hsla(0,0%,100%,1)'/><path d='M3.25 10h13.5M10 3.25v13.5'  stroke-linejoin='round' stroke-linecap='round' stroke-width='1' stroke='hsla(259, 0%, 93%, 1)' fill='none'/></pattern></defs><rect width='800%' height='800%' transform='translate(0,0)' fill='url(%23a)'/></svg>")
 }
+
 .logo {
   @apply text-primary text-2xl cursor-pointer;
 }
 
 .header {
-  @apply flex items-center justify-between container mx-auto;
+  @apply flex items-center justify-center md:justify-between container mx-auto;
   min-height: 88px;
 }
 
@@ -28,7 +28,7 @@
 }
 
 .subtitle {
-  @apply text-accent-5 md:text-xl mt-8;
+  @apply text-accent-7 md:text-xl mt-8;
 }
 
 .subscribeForm {
