--- a/src/components/ui/Button/Button.module.css
+++ b/src/components/ui/Button/Button.module.css
@@ -1,5 +1,5 @@
 .root {
-  @apply bg-blue text-accent-0 cursor-pointer inline-flex
+  @apply bg-blue text-primary cursor-pointer inline-flex
   px-10 py-5 leading-6 transition ease-in-out duration-150
   shadow-sm text-center justify-center uppercase
   border border-transparent items-center text-sm font-semibold
