--- a/src/components/ShareModal/TextTestimonial/TextTestimonial.module.css
+++ b/src/components/ShareModal/TextTestimonial/TextTestimonial.module.css
@@ -3,5 +3,6 @@
 }
 
 .editor {
-  @apply prose prose-sm sm:prose focus:outline-none min-h-[200px] text-primary;
+  @apply prose prose-sm sm:prose focus:outline-none min-h-[200px];
+  color: var(--secondary)
 }
