--- a/src/components/ShareModal/social-testimonial.module.css
+++ b/src/components/ShareModal/social-testimonial.module.css
@@ -3,7 +3,7 @@
 }
 
 .button {
-  @apply flex items-center justify-start gap-2 text-xl p-3 rounded-xl text-primary;
+  @apply flex items-center justify-start gap-2 text-xl p-3 rounded-xl text-white;
   @apply hover:scale-105;
   @apply transition-all duration-200;
 }
