--- a/src/components/Landing/landing.module.css
+++ b/src/components/Landing/landing.module.css
@@ -48,7 +48,7 @@
 }
 
 .hero{
-  @apply flex md:flex-row flex-col justify-center gap-6;
+  @apply flex md:flex-row flex-col justify-center gap-6 px-4;
 }
 
 .heroContent {
