--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -136,3 +136,11 @@ a {
     opacity: 1;
   }
 }
+
+.ProseMirror p.is-editor-empty:first-child::before {
+  color: #adb5bd;
+  content: attr(data-placeholder);
+  float: left;
+  height: 0;
+  pointer-events: none;
+}
